--- a/index.html
+++ b/index.html
@@ -3,153 +3,201 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WindYE - Ultimate Site</title>
+    <title>Home - Your Website Name</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Custom CSS -->
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            background-color: #000;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            overflow: hidden;
+        /* Navigation Bar Styling */
+        .navbar {
+            background-color: #333;
         }
-        nav {
-            width: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            position: fixed;
-            top: 0;
-            display: flex;
-            justify-content: space-around;
-            padding: 15px 0;
-            z-index: 1;
+        .navbar-nav .nav-link {
+            color: white !important;
+            font-size: 17px;
         }
-        nav a {
-            color: #00ff99;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 10px;
-            transition: 0.3s;
+        .navbar-nav .nav-link:hover {
+            background-color: #111 !important;
         }
-        nav a:hover {
-            color: #ff00ff;
-            text-decoration: underline;
-        }
-        #tsparticles {
+        /* Particle Background Styling */
+        #particles-js {
             position: absolute;
             width: 100%;
             height: 100%;
-            z-index: 0;
+            z-index: -1;
         }
-        .content {
+        /* Main Content Styling */
+        .main-content {
             position: relative;
             z-index: 1;
+            color: white;
             text-align: center;
-            margin-top: 100px;
+            padding: 100px 20px;
         }
-        .content h1 {
-            font-size: 50px;
-            margin-bottom: 10px;
-        }
-        .content p {
+        /* Download Button Styling */
+        .download-btn {
+            background-color: #28a745;
+            color: white;
+            padding: 10px 20px;
             font-size: 20px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .download-btn:hover {
+            background-color: #218838;
+            color: white;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
-
     <!-- Navigation Bar -->
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Download</a>
-        <a href="https://discord.gg/XySJyP6t" target="_blank">Join Discord</a>
-        <a href="#">FAQ</a>
-        <a href="#">Contact Us</a>
-        <a href="#">About</a>
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand text-white" href="#">🌐 YourBrand</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">🏠 Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="features.html">✨ Features</a></li>
+                <li class="nav-item"><a class="nav-link" href="downloads.html">⬇️ Downloads</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">📞 Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">ℹ️ About</a></li>
+                <li class="nav-item"><a class="nav-link" href="faq.html">❓ FAQ</a></li>
+                <li class="nav-item"><a class="nav-link" href="tos.html">⚖️ Terms of Service</a></li>
+                <li class="nav-item"><a class="nav-link" href="privacy.html">🔒 Privacy Policy</a></li>
+            </ul>
+        </div>
     </nav>
 
-    <!-- tsParticles Container -->
-    <div id="tsparticles"></div>
+    <!-- Particle Background -->
+    <div id="particles-js"></div>
 
     <!-- Main Content -->
-    <div class="content">
-        <h1>Welcome to WindYE! 🚀✨</h1>
-        <p>Your ultimate platform for Roblox execution.</p>
+    <div class="main-content">
+        <h1>Welcome to Our Website!</h1>
+        <p>Your ultimate platform for [describe your service/product].</p>
+        <a href="path/to/your/file.zip" class="download-btn" download>⬇️ Download Now</a>
     </div>
 
-    <!-- tsParticles Library -->
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles@1.37.5"></script>
-
-    <!-- Initialize tsParticles -->
+    <!-- jQuery and Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Particles.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!-- Particles.js Configuration -->
     <script>
-        tsParticles.load("tsparticles", {
-            particles: {
-                number: {
-                    value: 80,
-                    density: {
-                        enable: true,
-                        value_area: 800
+        particlesJS("particles-js", {
+            "particles": {
+                "number": {
+                    "value": 80,
+                    "density": {
+                        "enable": true,
+                        "value_area": 800
                     }
                 },
-                color: {
-                    value: "#00ff99"
+                "color": {
+                    "value": "#ffffff"
                 },
-                shape: {
-                    type: "circle"
-                },
-                opacity: {
-                    value: 0.5,
-                    random: false
-                },
-                size: {
-                    value: 3,
-                    random: true
-                },
-                line_linked: {
-                    enable: true,
-                    distance: 150,
-                    color: "#00ff99",
-                    opacity: 0.4,
-                    width: 1
-                },
-                move: {
-                    enable: true,
-                    speed: 2,
-                    direction: "none",
-                    random: false,
-                    straight: false,
-                    bounce: true
-                }
-            },
-            interactivity: {
-                detect_on: "canvas",
-                events: {
-                    onhover: {
-                        enable: true,
-                        mode: "repulse"
+                "shape": {
+                    "type": "circle",
+                    "stroke": {
+                        "width": 0,
+                        "color": "#000000"
                     },
-                    onclick: {
-                        enable: true,
-                        mode: "push"
+                    "polygon": {
+                        "nb_sides": 5
                     },
-                    resize: true
+                    "image": {
+                        "src": "img/github.svg",
+                        "width": 100,
+                        "height": 100
+                    }
                 },
-                modes: {
-                    repulse: {
-                        distance: 100,
-                        duration: 0.4
-                    },
-                    push: {
-                        particles_nb: 4
+                "opacity": {
+                    "value": 0.5,
+                    "random": false,
+                    "anim": {
+                        "enable": false,
+                        "speed": 1,
+                        "opacity_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "size": {
+                    "value": 3,
+                    "random": true,
+                    "anim": {
+                        "enable": false,
+                        "speed": 40,
+                        "size_min": 0.1,
+                        "sync": false
+                    }
+                },
+                "line_linked": {
+                    "enable": true,
+                    "distance": 150,
+                    "color": "#ffffff",
+                    "opacity": 0.4,
+                    "width": 1
+                },
+                "move": {
+                    "enable": true,
+                    "speed": 6,
+                    "direction": "none",
+                    "random": false,
+                    "straight": false,
+                    "out_mode": "out",
+                    "attract": {
+                        "enable": false,
+                        "rotateX": 600,
+                        "rotateY": 1200
                     }
                 }
             },
-            retina_detect: true,
-            background: {
-                color: "#000000"
-            }
+            "interactivity": {
+                "detect_on": "canvas",
+                "events": {
+                    "onhover": {
+                        "enable": true,
+                        "mode": "repulse"
+                    },
+                    "onclick": {
+                        "enable": true,
+                        "mode": "push"
+                    },
+                    "resize": true
+                },
+                "modes": {
+                    "grab": {
+                        "distance": 400,
+                        "line_linked": {
+                            "opacity": 1
+                        }
+                    },
+                    "bubble": {
+                        "distance": 400,
+                        "size": 40,
+                        "duration": 2,
+                        "opacity": 8,
+                        "speed": 3
+                    },
+                    "repulse": {
+                        "distance": 200
+                    },
+                    "push": {
+                        "particles_nb": 4
+                    },
+                    "remove": {
+                        "particles_nb": 2
+                    }
+                }
+            },
+            "retina_detect": true
         });
     </script>
-
 </body>
 </html>
+
