--- a/features.html
+++ b/features.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>WindYE - Features</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Features - Your Website Name</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>🌟 WindYE Features 🌟</h1>
-    <ul style="text-align:left; font-size:20px;">
-      <li>✔️ Fast DLL Injection</li>
-      <li>✔️ 100+ Built-in Scripts</li>
-      <li>✔️ Undetectable Modes</li>
-      <li>✔️ Auto-Updating System</li>
-      <li>✔️ Custom UI Themes</li>
-      <li>✔️ Multi-Game Support</li>
-    </ul>
-    <a href="index.html" class="download-btn">🏠 Back Home</a>
-  </div>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul class="navbar">
+            <li><a href="index.html">🏠 Home</a></li>
+            <li><a href="features.html">✨ Features</a></li>
+            <li><a href="downloads.html">⬇️ Downloads</a></li>
+            <li><a href="contact.html">📞 Contact</a></li>
+            <li><a href="about.html">ℹ️ About</a></li>
+            <li><a href="faq.html">❓ FAQ</a></li>
+            <li><a href="tos.html">⚖️ Terms of Service</a></li>
+            <li><a href="privacy.html">🔒 Privacy Policy</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <main>
+        <h1>Our Features</h1>
+        <ul>
+            <li>Feature 1: SECURITY BYPASS 1.</li>
+            <li>Feature 2: TRUSTED 2.</li>
+            <li>Feature 3: FAST INJECTION 3.</li>
+            <!-- Add more features as needed -->
+        </ul>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
