--- a/downloads.html
+++ b/downloads.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>WindYE - Downloads</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Downloads - Your Website Name</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>⬇️ Download WindYE ⬇️</h1>
-    <a href="YOUR_MAIN_DOWNLOAD_LINK" class="download-btn">Main Download</a>
-    <a href="YOUR_MIRROR_LINK" class="download-btn">Mirror Download</a>
-    <a href="index.html" class="download-btn">🏠 Back Home</a>
-  </div>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul class="navbar">
+            <li><a href="index.html">🏠 Home</a></li>
+            <li><a href="features.html">✨ Features</a></li>
+            <li><a href="downloads.html">⬇️ Downloads</a></li>
+            <li><a href="contact.html">📞 Contact</a></li>
+            <li><a href="about.html">ℹ️ About</a></li>
+            <li><a href="faq.html">❓ FAQ</a></li>
+            <li><a href="tos.html">⚖️ Terms of Service</a></li>
+            <li><a href="privacy.html">🔒 Privacy Policy</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
+    <main>
+        <h1>Download Our Product</h1>
+        <p>Click the button below to download the latest version:</p>
+        <a href="path/to/your/file.zip" class="download-btn" download>⬇️ Download Now</a>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
