--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Your Website Name</title>
+    <title>Home - windY</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Custom CSS -->
     <style>
         /* Navigation Bar Styling */
         .navbar {
-            background-color: #333;
+            background-color: #000;
         }
         .navbar-nav .nav-link {
-            color: white !important;
+            color: #00ffff !important;
             font-size: 17px;
+            text-shadow: 0 0 10px #00ffff;
         }
         .navbar-nav .nav-link:hover {
             background-color: #111 !important;
+            color: #ff00ff !important;
+            text-shadow: 0 0 15px #ff00ff;
+        }
+        .navbar-brand {
+            color: #39ff14 !important;
+            font-size: 24px;
+            font-weight: bold;
+            text-shadow: 0 0 15px #39ff14;
         }
         /* Particle Background Styling */
         #particles-js {
@@ -34,27 +43,42 @@
             text-align: center;
             padding: 100px 20px;
         }
+        .main-content h1 {
+            font-size: 4rem;
+            font-weight: bold;
+            background: linear-gradient(90deg, #39ff14, #00ffff, #ff00ff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 0 0 20px #00ffff;
+        }
+        .main-content p {
+            font-size: 20px;
+            color: #f5f5f5;
+        }
         /* Download Button Styling */
         .download-btn {
-            background-color: #28a745;
+            background: linear-gradient(45deg, #ff00ff, #00ffff);
             color: white;
-            padding: 10px 20px;
+            padding: 12px 25px;
             font-size: 20px;
             border: none;
             border-radius: 5px;
             text-decoration: none;
+            box-shadow: 0 0 15px #00ffff;
         }
         .download-btn:hover {
-            background-color: #218838;
+            background: linear-gradient(45deg, #00ffff, #ff00ff);
             color: white;
             text-decoration: none;
+            box-shadow: 0 0 25px #ff00ff;
         }
     </style>
 </head>
 <body>
+
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand text-white" href="#">🌐 YourBrand</a>
+        <a class="navbar-brand" href="#">⚡ windY</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -77,8 +101,8 @@
 
     <!-- Main Content -->
     <div class="main-content">
-        <h1>Welcome to Our Website!</h1>
-        <p>Your ultimate platform for [describe your service/product].</p>
+        <h1>Welcome to windY!</h1>
+        <p>The ultimate hacking & domination platform. Rule the game!</p>
         <a href="path/to/your/file.zip" class="download-btn" download>⬇️ Download Now</a>
     </div>
 
@@ -92,69 +116,44 @@
         particlesJS("particles-js", {
             "particles": {
                 "number": {
-                    "value": 80,
+                    "value": 150,
                     "density": {
                         "enable": true,
                         "value_area": 800
                     }
                 },
                 "color": {
-                    "value": "#ffffff"
+                    "value": ["#39ff14", "#00ffff", "#ff00ff"]
                 },
                 "shape": {
                     "type": "circle",
                     "stroke": {
                         "width": 0,
-                        "color": "#000000"
-                    },
-                    "polygon": {
-                        "nb_sides": 5
-                    },
-                    "image": {
-                        "src": "img/github.svg",
-                        "width": 100,
-                        "height": 100
+                        "color": "#000"
                     }
                 },
                 "opacity": {
-                    "value": 0.5,
-                    "random": false,
-                    "anim": {
-                        "enable": false,
-                        "speed": 1,
-                        "opacity_min": 0.1,
-                        "sync": false
-                    }
+                    "value": 0.6,
+                    "random": true
                 },
                 "size": {
-                    "value": 3,
-                    "random": true,
-                    "anim": {
-                        "enable": false,
-                        "speed": 40,
-                        "size_min": 0.1,
-                        "sync": false
-                    }
+                    "value": 4,
+                    "random": true
                 },
                 "line_linked": {
                     "enable": true,
-                    "distance": 150,
-                    "color": "#ffffff",
-                    "opacity": 0.4,
+                    "distance": 120,
+                    "color": "#00ffff",
+                    "opacity": 0.5,
                     "width": 1
                 },
                 "move": {
                     "enable": true,
-                    "speed": 6,
+                    "speed": 4,
                     "direction": "none",
                     "random": false,
                     "straight": false,
-                    "out_mode": "out",
-                    "attract": {
-                        "enable": false,
-                        "rotateX": 600,
-                        "rotateY": 1200
-                    }
+                    "out_mode": "out"
                 }
             },
             "interactivity": {
@@ -162,36 +161,22 @@
                 "events": {
                     "onhover": {
                         "enable": true,
-                        "mode": "repulse"
+                        "mode": "grab"
                     },
                     "onclick": {
                         "enable": true,
                         "mode": "push"
-                    },
-                    "resize": true
+                    }
                 },
                 "modes": {
                     "grab": {
-                        "distance": 400,
+                        "distance": 200,
                         "line_linked": {
                             "opacity": 1
                         }
                     },
-                    "bubble": {
-                        "distance": 400,
-                        "size": 40,
-                        "duration": 2,
-                        "opacity": 8,
-                        "speed": 3
-                    },
-                    "repulse": {
-                        "distance": 200
-                    },
                     "push": {
-                        "particles_nb": 4
-                    },
-                    "remove": {
-                        "particles_nb": 2
+                        "particles_nb": 6
                     }
                 }
             },
