--- a/index.html
+++ b/index.html
@@ -1,188 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - windY</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- Custom CSS -->
-    <style>
-        /* Navigation Bar Styling */
-        .navbar {
-            background-color: #000;
-        }
-        .navbar-nav .nav-link {
-            color: #00ffff !important;
-            font-size: 17px;
-            text-shadow: 0 0 10px #00ffff;
-        }
-        .navbar-nav .nav-link:hover {
-            background-color: #111 !important;
-            color: #ff00ff !important;
-            text-shadow: 0 0 15px #ff00ff;
-        }
-        .navbar-brand {
-            color: #39ff14 !important;
-            font-size: 24px;
-            font-weight: bold;
-            text-shadow: 0 0 15px #39ff14;
-        }
-        /* Particle Background Styling */
-        #particles-js {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
-        /* Main Content Styling */
-        .main-content {
-            position: relative;
-            z-index: 1;
-            color: white;
-            text-align: center;
-            padding: 100px 20px;
-        }
-        .main-content h1 {
-            font-size: 4rem;
-            font-weight: bold;
-            background: linear-gradient(90deg, #39ff14, #00ffff, #ff00ff);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 20px #00ffff;
-        }
-        .main-content p {
-            font-size: 20px;
-            color: #f5f5f5;
-        }
-        /* Download Button Styling */
-        .download-btn {
-            background: linear-gradient(45deg, #ff00ff, #00ffff);
-            color: white;
-            padding: 12px 25px;
-            font-size: 20px;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            box-shadow: 0 0 15px #00ffff;
-        }
-        .download-btn:hover {
-            background: linear-gradient(45deg, #00ffff, #ff00ff);
-            color: white;
-            text-decoration: none;
-            box-shadow: 0 0 25px #ff00ff;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WindYE - Game Exploits for Testing</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">⚡ windY</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">🏠 Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="features.html">✨ Features</a></li>
-                <li class="nav-item"><a class="nav-link" href="downloads.html">⬇️ Downloads</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">📞 Contact</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">ℹ️ About</a></li>
-                <li class="nav-item"><a class="nav-link" href="faq.html">❓ FAQ</a></li>
-                <li class="nav-item"><a class="nav-link" href="tos.html">⚖️ Terms of Service</a></li>
-                <li class="nav-item"><a class="nav-link" href="privacy.html">🔒 Privacy Policy</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Particle Background -->
-    <div id="particles-js"></div>
-
-    <!-- Main Content -->
-    <div class="main-content">
-        <h1>Welcome to windY!</h1>
-        <p>The ultimate hacking & domination platform. Rule the game!</p>
-        <a href="path/to/your/file.zip" class="download-btn" download>⬇️ Download Now</a>
-    </div>
-
-    <!-- jQuery and Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- Particles.js -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <!-- Particles.js Configuration -->
-    <script>
-        particlesJS("particles-js", {
-            "particles": {
-                "number": {
-                    "value": 150,
-                    "density": {
-                        "enable": true,
-                        "value_area": 800
-                    }
-                },
-                "color": {
-                    "value": ["#39ff14", "#00ffff", "#ff00ff"]
-                },
-                "shape": {
-                    "type": "circle",
-                    "stroke": {
-                        "width": 0,
-                        "color": "#000"
-                    }
-                },
-                "opacity": {
-                    "value": 0.6,
-                    "random": true
-                },
-                "size": {
-                    "value": 4,
-                    "random": true
-                },
-                "line_linked": {
-                    "enable": true,
-                    "distance": 120,
-                    "color": "#00ffff",
-                    "opacity": 0.5,
-                    "width": 1
-                },
-                "move": {
-                    "enable": true,
-                    "speed": 4,
-                    "direction": "none",
-                    "random": false,
-                    "straight": false,
-                    "out_mode": "out"
-                }
-            },
-            "interactivity": {
-                "detect_on": "canvas",
-                "events": {
-                    "onhover": {
-                        "enable": true,
-                        "mode": "grab"
-                    },
-                    "onclick": {
-                        "enable": true,
-                        "mode": "push"
-                    }
-                },
-                "modes": {
-                    "grab": {
-                        "distance": 200,
-                        "line_linked": {
-                            "opacity": 1
-                        }
-                    },
-                    "push": {
-                        "particles_nb": 6
-                    }
-                }
-            },
-            "retina_detect": true
-        });
-    </script>
+  <div class="matrix-container">
+    <h1 class="neon-text">Welcome to WindYE</h1>
+    <p class="neon-text">Game-changing exploits for testing purposes only.</p>
+    <a href="https://discord.gg/Dtgn4x7hfd" class="neon-button">Join Discord</a>
+    <a href="mailto:naseebnoveera0@gmail.com" class="neon-button">Email Us</a>
+    <p class="disclaimer neon-text">Disclaimer: All exploits are for testing purposes only. Misuse is prohibited.</p>
+  </div>
+  <canvas id="matrix"></canvas>
+  <script src="script.js"></script>
 </body>
 </html>
-
