--- a/about.html
+++ b/about.html
@@ -2,31 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WindYE - About</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About WindYE</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <nav>
-    <ul class="navbar">
-      <li><a href="index.html">🏠 Home</a></li>
-      <li><a href="features.html">✨ Features</a></li>
-      <li><a href="downloads.html">⬇️ Downloads</a></li>
-      <li><a href="contact.html">📞 Contact</a></li>
-      <li><a href="about.html">ℹ️ About</a></li>
-      <li><a href="faq.html">❓ FAQ</a></li>
-      <li><a href="tos.html">⚖️ Terms of Service</a></li>
-      <li><a href="privacy.html">🔒 Privacy Policy</a></li>
-    </ul>
-  </nav>
-
-  <div class="container">
-    <h1>💨 About WindYE 💨</h1>
-    <p>WindYE is the ultimate Roblox executor built for speed, power, and safety. Developed by passionate creators who love innovation.</p>
-    <p>Version: 1.0 | Established: 2025</p>
-    <a href="index.html" class="download-btn">🏠 Back Home</a>
+  <div class="matrix-container">
+    <h1 class="neon-text">About WindYE</h1>
+    <p class="neon-text">We provide game-changing exploits for testing purposes only.</p>
+    <a href="index.html" class="neon-button">Home</a>
+    <p class="disclaimer neon-text">Disclaimer: All exploits are for testing purposes only. Misuse is prohibited.</p>
   </div>
-
+  <canvas id="matrix"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
