--- a/downloads.html
+++ b/downloads.html
@@ -1,34 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Downloads - Your Website Name</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Downloads - WindYE</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav>
-        <ul class="navbar">
-            <li><a href="index.html">🏠 Home</a></li>
-            <li><a href="features.html">✨ Features</a></li>
-            <li><a href="downloads.html">⬇️ Downloads</a></li>
-            <li><a href="contact.html">📞 Contact</a></li>
-            <li><a href="about.html">ℹ️ About</a></li>
-            <li><a href="faq.html">❓ FAQ</a></li>
-            <li><a href="tos.html">⚖️ Terms of Service</a></li>
-            <li><a href="privacy.html">🔒 Privacy Policy</a></li>
-        </ul>
-    </nav>
+  <div class="matrix-container">
+    <h1 class="neon-text">Downloads</h1>
+    <p class="neon-text">Get the latest exploits for testing purposes.</p>
+    
+    <div class="download-links">
+      <a href="#" class="neon-button">Exploit 1</a>
+      <a href="#" class="neon-button">Exploit 2</a>
+      <a href="#" class="neon-button">Exploit 3</a>
+    </div>
 
-    <!-- Main Content -->
-    <main>
-        <h1>Download Our Product</h1>
-        <p>Click the button below to download the latest version:</p>
-        <a href="path/to/your/file.zip" class="download-btn" download>⬇️ Download Now</a>
-    </main>
-
-    <script src="script.js"></script>
+    <a href="index.html" class="neon-button">Home</a>
+    <p class="disclaimer neon-text">Disclaimer: All exploits are for testing purposes only. Misuse is prohibited.</p>
+  </div>
+  <canvas id="matrix"></canvas>
+  <script src="script.js"></script>
 </body>
 </html>
-
