--- a/features.html
+++ b/features.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Features - Your Website Name</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Features - WindYE</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav>
-        <ul class="navbar">
-            <li><a href="index.html">🏠 Home</a></li>
-            <li><a href="features.html">✨ Features</a></li>
-            <li><a href="downloads.html">⬇️ Downloads</a></li>
-            <li><a href="contact.html">📞 Contact</a></li>
-            <li><a href="about.html">ℹ️ About</a></li>
-            <li><a href="faq.html">❓ FAQ</a></li>
-            <li><a href="tos.html">⚖️ Terms of Service</a></li>
-            <li><a href="privacy.html">🔒 Privacy Policy</a></li>
-        </ul>
-    </nav>
+  <div class="matrix-container">
+    <h1 class="neon-text">Features</h1>
+    <p class="neon-text">What makes WindYE unique?</p>
+    
+    <div class="features-list">
+      <ul>
+        <li class="neon-text">Advanced game vulnerability detection</li>
+        <li class="neon-text">Easy-to-use tools for testers</li>
+        <li class="neon-text">Regular updates and support</li>
+        <li class="neon-text">Ethical use only</li>
+      </ul>
+    </div>
 
-    <!-- Main Content -->
-    <main>
-        <h1>Our Features</h1>
-        <ul>
-            <li>Feature 1: SECURITY BYPASS 1.</li>
-            <li>Feature 2: TRUSTED 2.</li>
-            <li>Feature 3: FAST INJECTION 3.</li>
-            <!-- Add more features as needed -->
-        </ul>
-    </main>
-
-    <script src="script.js"></script>
+    <a href="index.html" class="neon-button">Home</a>
+    <p class="disclaimer neon-text">Disclaimer: All exploits are for testing purposes only. Misuse is prohibited.</p>
+  </div>
+  <canvas id="matrix"></canvas>
+  <script src="script.js"></script>
 </body>
 </html>
