--- a/downloads.html
+++ b/downloads.html
@@ -12,9 +12,9 @@
     <p class="neon-text">Get the latest exploits for testing purposes.</p>
     
     <div class="download-links">
-      <a href="#" class="neon-button">Exploit 1</a>
-      <a href="#" class="neon-button">Exploit 2</a>
-      <a href="#" class="neon-button">Exploit 3</a>
+      <a href="#" class="neon-button">TESTER 1</a>
+      <a href="#" class="neon-button">TESTED 2</a>
+      <a href="#" class="neon-button">TEST 3</a>
     </div>
 
     <a href="index.html" class="neon-button">Home</a>
