--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <div class="matrix-container">
     <h1 class="neon-text">Contact WindYE</h1>
-    <p class="neon-text">Have questions? Reach out to us!</p>
+    <p class="neon-text">Have questions? Reach out to us!!</p>
     
     <div class="contact-info">
       <p class="neon-text">Email: <a href="mailto:naseebnoveera0@gmail.com" class="neon-link">naseebnoveera0@gmail.com</a></p>
