--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <h1 class="neon-text">About WindYE</h1>
     <p class="neon-text">We provide game-changing exploits for testing purposes only.</p>
     <a href="index.html" class="neon-button">Home</a>
-    <p class="disclaimer neon-text">Disclaimer: All exploits are for testing purposes only. Misuse is prohibited.</p>
+    <p class="disclaimer neon-text">Disclaimer: All exploits! are for testing purposes only. Misuse is prohibited.</p>
   </div>
   <canvas id="matrix"></canvas>
   <script src="script.js"></script>
