--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     </div>
 
     <a href="index.html" class="neon-button">Home</a>
-    <p class="disclaimer neon-text">Disclaimer: All exploits are for testing purposes only. Misuse is prohibited.</p>
+    <p class="disclaimer neon-text">Disclaimer: All exploit are for testing purposes only. Misuse is prohibited.</p>
   </div>
   <canvas id="matrix"></canvas>
   <script src="script.js"></script>
