--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     </header>
 
     <section id="hero">
-        <h1>Welcome to WindYE</h1>
-        <p>Your ultimate Roblox executor with advanced features and custom scripts.</p>
-        <a href="#download" class="cta-button">Download Now</a>
+        <h1 class="animate-text">Welcome to WindYE</h1>
+        <p class="animate-text">Your ultimate Roblox executor with advanced features and custom scripts.</p>
+        <a href="#download" class="cta-button animate-button">Download Now</a>
     </section>
 
     <section id="download">
         <h2>Download the Ultimate Executor</h2>
         <p>Get WindYE, the most powerful and advanced Roblox executor. Just click the button below to get started!</p>
-        <button onclick="downloadExecutor()" class="download-btn">Download Executor</button>
+        <button onclick="downloadExecutor()" class="download-btn animate-button">Download Executor</button>
     </section>
 
     <section id="features">
@@ -52,7 +52,7 @@
         <h2>Verify You're Not a Robot</h2>
         <form action="submit.php" method="POST">
             <div class="g-recaptcha" data-sitekey="your-recaptcha-site-key"></div>
-            <button type="submit" class="submit-btn">Verify and Continue</button>
+            <button type="submit" class="submit-btn animate-button">Verify and Continue</button>
         </form>
     </section>
 
